--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<sention>
+		<section>
 			<article></article>
-		</sention>
+		</section>
 	</body>
 </html>
